<resources>
    <string name="app_name">PT XYZ</string>
    <string name="location">Sleman</string>
    <string name="information">Informasi perubahan data katalog</string>
    <string name="last_update">Pembaruan terakhir:</string>
    <string name="last_update_value">16-06-2022 15:00:01</string>
    <string name="next_update">Pembaruan selanjutnya:</string>
    <string name="next_update_value">17-06-2022 15:00:01</string>
    <string name="tender_catalog">Katalog Tender</string>
    <string name="saved_tender">Tender Tersimpan</string>
    <string name="statistik_report">Laporan Statistik</string>
    <string name="settings">Pengaturan</string>
    <string name="katalog_tender">Katalog Tender</string>
    <string name="tender_tersimpan">Tender Tersimpan</string>
    <string name="laporan_statistik">Laporan Statistik</string>
    <string name="pengaturan">Pengaturan</string>
</resources>