<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_location_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_marginTop="16dp"
            android:src="@drawable/location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/img_location_pin"
            android:layout_toEndOf="@id/img_location_pin"
            android:fontFamily="@font/montserrat"
            android:text="@string/location"
            android:textColor="@color/primary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rl_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_location_pin"
            android:layout_marginTop="16dp"
            android:background="@drawable/border"
            android:elevation="4dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:translationZ="4dp">

            <TextView
                android:id="@+id/txt_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/information"
                android:textAlignment="center"
                android:textSize="14sp" />

            <RelativeLayout
                android:id="@+id/rl_last_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_information"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/txt_last_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/last_update"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/txt_last_update"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/last_update_value"
                    android:textColor="@color/primary"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_last_update"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/txt_next_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/next_update"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/txt_next_update"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/next_update_value"
                    android:textColor="@color/primary"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_information"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp">

            <RelativeLayout
                android:id="@+id/rl_search"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="16dp"
                android:background="@drawable/button"
                android:elevation="8dp"
                android:stateListAnimator="@null"
                app:backgroundTint="@null">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true">

                    <ImageView
                        android:id="@+id/img_search"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/search"
                        app:tint="@color/primary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_search"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/katalog_tender"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_saved"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="16dp"
                android:background="@drawable/button"
                android:elevation="8dp"
                android:stateListAnimator="@null"
                app:backgroundTint="@null">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true">

                    <ImageView
                        android:id="@+id/img_saved"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/bookmark_saved"
                        app:tint="@color/primary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_saved"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/tender_tersimpan"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_statistic"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_below="@id/rl_search"
                android:layout_alignParentStart="true"
                android:layout_margin="16dp"
                android:background="@drawable/button"
                android:elevation="8dp"
                android:stateListAnimator="@null"
                app:backgroundTint="@null">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true">

                    <ImageView
                        android:id="@+id/img_statistic"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/chart"
                        app:tint="@color/primary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_statistic"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/laporan_statistik"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_below="@id/rl_saved"
                android:layout_alignParentEnd="true"
                android:layout_margin="16dp"
                android:background="@drawable/button"
                android:elevation="8dp"
                android:stateListAnimator="@null"
                app:backgroundTint="@null">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true">

                    <ImageView
                        android:id="@+id/img_settings"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/settings"
                        app:tint="@color/primary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_settings"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/pengaturan"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>